--- a/Assignments/Assignment3/style.css
+++ b/Assignments/Assignment3/style.css
@@ -94,6 +94,8 @@ nav button:hover{
 
     padding: 100px 0;
     text-align: center;
+
+    /* overflow: hidden; */
 }
 
 .hero-content{
@@ -147,10 +149,49 @@ nav button:hover{
     color: #fff;
 }
 
+.hero-visual{
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 600px;
+    margin-top: 60px;
+    /* overflow: hidden; */
+}
+
+.hero-visual img{
+    /* position: absolute; */
+    width: 100%;
+    max-width: 700px;
+    rotate: -9deg;
+    /* padding-top: 55px; */
+}
+
+.gradient1{
+    height: 250px;
+    width: 100%;
+    background: linear-gradient(rgb(239, 157, 6), rgb(252, 141, 159), rgb(205, 4, 205));
+    filter: blur(60px);
+    rotate: -6deg;
+}
+
+.gradient2{
+    /* position: absolute; */
+    height:300px;
+    width: 100%;
+    background-color: white;
+    filter: blur(60px);
+    rotate: -6deg;
+    top: 90%;
+}
 
 
-
-
+/* page-2 */
+.page2{
+    background-color: crimson;
+     width: 100%;
+    min-height: 100vh;
+}
 
 
 
