--- a/Assignments/Assignment6/style.css
+++ b/Assignments/Assignment6/style.css
@@ -1,13 +1,13 @@
-@font-face {
+/* @font-face {
     font-family: inter;
     src: url(/Inter-Regular.47e70f6ff0.woff2);
-}
+} */
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: inter;
+    font-family: 'Poppins', sans-serif;
     /* color: #fff; */
 }
 
@@ -95,7 +95,7 @@ nav{
 .left-part h1{
     font-size: 80px;
     line-height: 1.3;
-    font-weight: 800;
+    font-weight: 600;
     letter-spacing: -2px;
 }
 
@@ -158,6 +158,7 @@ nav{
 .top-destinations h1{
     font-size: 36px;
     margin-bottom: 20px;
+    font-weight: 800;
 }
 
 #countries{
@@ -418,8 +419,6 @@ nav{
     place-items: center;
     font-size: 32px;
     color: white;
-    /* background: rgba(0,0,0,0.3); */
-    /* border-radius: 20px; */
 }
 
 .highlight-title{
@@ -434,4 +433,174 @@ nav{
     background: transparent;
     border: 1px solid black;
     font-weight: 600;
+    cursor: pointer;
+}
+
+
+.newsletter{
+    position: relative;
+    height: 600px;
+    background-image: url(https://images.unsplash.com/photo-1762241766341-b9970f0629ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+
+.newsletter::before{
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.361);
+}
+
+.newsletter-content{
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #ffff;
+    padding: 0 20px;
+}
+
+.newsletter-content h2{
+    font-size: 50px;
+    line-height: 1.3;
+    margin-bottom: 60px;
+    font-weight: 500;
+}
+
+.form{
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    max-width: 550px;
+    margin-bottom: 50px;
+}
+
+.form .email{
+    flex: 1;
+    padding: 12px 20px;
+    min-width: 0;
+    border-radius: 30px;
+    border: none;
+}
+
+.form .submit{
+    padding: 12px 40px;
+    border-radius: 30px;
+    border: none;
+    background-color: #F5764E;
+    color: #ffff;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+
+.newsletter-note{
+    font-size: 18px;
+    color: #fff;
+}
+
+.newsletter-note a{
+    color: #fff;
+    text-decoration: underline;
+}
+
+
+.footer{
+    padding: 0 100px;
+    padding-top: 40px;
+}
+
+.footer-content{
+    display: grid;
+    grid-template-columns: 1.5fr repeat(4, 1fr);
+    gap: 50px;
+}
+
+.footer-logo{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+.footer-logo img{
+    height: 30px;
+    width: 30px;
+}
+
+.footer-logo h3{
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.footer-col.brand p{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.social-icons{
+    display: flex;
+    gap: 14px;
+}
+
+.social-icons i{
+    font-size: 18px;
+    color: #fff;
+}
+
+.social-icons .box{
+    height: 30px;
+    width: 30px;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.footer-col h4{
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+
+.footer-col ul{
+    list-style: none;
+}
+
+.footer-col ul li{
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a{
+    text-decoration: none;
+    font-size: 15px;
+    color: #555;
+    transition: color 0.3s;
+}
+
+.footer-col ul li a:hover{
+    color: #111;
+}
+
+.footer-bottom{
+    margin-top: 60px;
+    height: 60px;
+    background-color: #111;
+
+}
+
+.footer-bottom p{
+    padding: 20px 100px;
+    font-size: 13px;
+    color: white;
 }
