--- a/Headspace-clone/style.css
+++ b/Headspace-clone/style.css
@@ -22,7 +22,7 @@
 html,
 body {
     font-family: regular;
-    background: #f6f6f6;
+    background: white;
     height: 100%;
     width: 100%;
     color: #222;
@@ -47,6 +47,7 @@ body {
     top: 0;
     z-index: 11;
     background: white;
+    /* box-shadow: none; */
 }
 
 .navbar.scrolled {
@@ -73,6 +74,7 @@ body {
     gap: 8px;
     font-size: 24px;
     font-family: medium;
+    cursor: pointer;
 }
 
 .nav-links {
@@ -123,11 +125,12 @@ body {
 /* Hero section */
 .hero {
     padding: 12px 60px;
+    background: #ffff;
 }
 
 .hero-inner {
     text-align: center;
-    padding: 0px 80px;
+    padding: 0px 40px;
 }
 
 .hero-inner h1 {
@@ -177,11 +180,16 @@ body {
     font-size: 14px;
     font-family: bold;
     padding: 12px 26px;
-    background: #000;
+    background: #222222;
     color: #ffff;
     border: none;
     border-radius: 30px;
     margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.hero-card button:hover{
+    background: #000;
 }
 
 .hero-card img {
@@ -189,3 +197,243 @@ body {
     height: 280px;
     object-fit: contain;
 }
+
+
+/* catagory section */
+.catagories{
+    padding: 80px 100px;
+    background: #ffff;
+    text-align: center;
+}
+
+.catagories h2{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.catagories-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
+}
+
+.catagory-card{
+    border: 2px solid #e5e5e5;
+    padding: 10px 20px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: all 0.25s ease;
+}
+
+.catagory-card:hover{
+    border-color: #b3b3b3;
+}
+
+.catagory-card p{
+    font-size: 22px;
+}
+
+.catagory-right{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.catagory-right img{
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+}
+
+.catagory-right i{
+    font-size: 25px;
+    transition: transform 0.3s ease;
+}
+
+.catagory-card:hover .catagory-right i{
+    transform: translate(6px);
+}
+
+
+
+/* featured section */
+.featured{
+    padding: 100px 100px;
+}
+
+.featured h1{
+    font-size: 46px;
+    margin-bottom: 50px;
+    text-align: center;
+    line-height: 1;
+}
+
+.tabs{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.tab{
+    font-size: 18px;
+    padding: 14px 26px;
+    border: none;
+    background: #F9F4F2;
+    border-radius: 30px;
+    font-family: bold;
+    cursor: pointer;
+}
+
+.tab:hover{
+    background: #e2dddb;
+}
+
+
+.slides{
+    margin-top: 20px;
+}
+
+.slide{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 60px 120px 160px 120px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.slide-yellow{
+    background: #FFCE00;
+}
+
+.slide-left{
+    width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.chat-card{
+    background: #f1f1f1;
+    padding: 26px 28px;
+    width: 80%;
+    border-radius: 20px;
+}
+
+.chat-card h4{
+    font-size: 20px;
+    margin-bottom: 10px;
+    position: relative;
+    padding-left: 20px;
+}
+
+.chat-card p{
+    font-size: 19px;
+    font-family: medium;
+}
+
+.user-blue::before,
+.user-orange::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 8px;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+}
+
+.user-blue::before{
+    background: radial-gradient(circle, #5c8cff, #003cff);
+    filter: blur(3px);
+}
+
+.user-orange::before{
+    background: radial-gradient(circle, #ffb46a, #ff4500);
+    filter: blur(3px);
+}
+
+.meditation-card{
+    background: #f1f1f1;
+    padding: 18px 22px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    box-shadow: 0px 10px 25px orange;
+}
+
+.meditation-left{
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+.meditation-left img{
+    height: 65px;
+    width: 115px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.meditation-left h5{
+    font-size: 16px;
+}
+
+.meditation-left p{
+    font-size: 16px;
+    font-family: medium;
+    color: #B0ACA5;
+}
+
+.play-btn{
+    font-size: 30px;
+}
+
+.slide-left img.egg-png{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    left: 25%;
+    bottom: -35%;
+}
+
+.slide-right{
+    width: 42%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.slide-right h3{
+    font-size: 40px;
+    line-height: 1;
+    margin-bottom: 30px;
+}
+
+.slide-right p{
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+}
+
+.slide-right button{
+    padding: 16px 28px;
+    font-size: 18px;
+    font-family: bold;
+    color: #434343;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;    
+}
+
+.slide-right button:hover{
+    background: #e2dddb;
+}
+
