--- a/Practice/style.css
+++ b/Practice/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #fff;
 }
 
 html,
@@ -13,65 +14,25 @@ body {
 
 body {
     background-color: #111;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.card{
-    height: 400px;
-    width: 300px;
-    background-color: white;
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-}
-
-.status{
+nav{
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    padding: 20px 40px;
+    background-color: rgba(0, 0, 0, 0.135);
+    position: fixed;
+    width: 100%;
+    backdrop-filter: blur(20px);
+    transition: all ease 0.2s;
+}
+
+nav div{
+    display: flex;
     gap: 20px;
-    padding:10px 20px;
-    border-bottom: 1px solid rgb(46, 45, 45);
 }
 
-
-
-.status img{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-
-.full{
-    height: 100%;
+img{
     width: 100%;
-    background: url("https://plus.unsplash.com/premium_photo-1771162722476-ac0c1c7b4c2e?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    display: none;    
-    padding: 20px;
 }
-
-#progress{
-    height: 6px;
-    width: 100%;
-    border-radius: 50px;
-    background-color: rgba(0, 0, 0, 0.221);
-}
-
-#growth{
-    height: 100%;
-    width: 50%;
-    background-color: green;
-    border-radius: 50px;
-}
-
-
